# anyrun-plugins

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
anyrun-timestamp/: Cargo.toml
anyrun-timestamp/src/: lib.rs
anyrun-todo/: Cargo.toml
anyrun-todo/src/: lib.rs  todo.rs
anyrun-vscode/: Cargo.toml
anyrun-vscode/src/: lib.rs
anyrun-watson/: Cargo.toml
anyrun-watson/src/: lib.rs  watson.rs  watson_matcher.rs
matcher/: Cargo.toml
matcher/src/: handler_display.rs  handler_display_command.rs  handler_wildcard_command.rs  lib.rs  matcher_static.rs
